--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,4 +1,16 @@
 #main_header{
 	background: black;
 	color: white;
+	height: 5em;
+	margin-bottom: 2.5em;
+}
+#main_header h1{
+	padding: 1.5em;
+	font-style: italic;
+}
+#main_header .icon-logo_bq{
+	font-size: 2.5em;
+	margin-right: 0.2em;
+	font-style: normal;
+	font-weight: normal;
 }
