--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,2 +1,9 @@
+$color_background: 		#F2F2F2;
+$color_blue_1: 			#428bca;
+$color_android:         #A4C639;
+$color_robotica:        #7549D0;
 
-$screen-xs: 			360 !default;
+$screen-xs: 			480;
+$screen-sm: 			767;
+$screen-md: 			991;
+$screen-lg: 			1199;
