--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -3,6 +3,10 @@ $color_blue_1: 			#428bca;
 $color_android:         #A4C639;
 $color_robotica:        #5351D2;
 
+$color_facebook: 		#3B5998;
+$color_twitter: 		#4099FF;
+$color_googlePlus: 		#D34836;
+
 $screen-xs: 			480;
 $screen-sm: 			767;
 $screen-md: 			991;
