--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -3,9 +3,11 @@
 	color: white;
 	height: 5em;
 	margin-bottom: 2.5em;
+	padding: 1.5em;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
 }
 #main_header h1{
-	padding: 1.5em;
 	font-style: italic;
 }
 #main_header .icon-logo_bq{
@@ -13,4 +15,19 @@
 	margin-right: 0.2em;
 	font-style: normal;
 	font-weight: normal;
+}
+@include breakpoint(xs) {
+	#main_header{
+		padding-left: 10%;
+	}
+}
+@include breakpoint(sm) {
+	#main_header{
+		padding-left: 15%;
+	}
+}
+@include breakpoint(lg) {
+	#main_header{
+		padding-left: 20%;
+	}
 }
