--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,7 +1,10 @@
 $color_background: 		#F2F2F2;
 $color_blue_1: 			#428bca;
 $color_android:         #A4C639;
-$color_robotica:        #5351D2;
+$color_robotica:        #268474;
+$color_smartphone:      #F18E26;
+$color_tablet:        	#FC4750;
+$color_ereader:        	#992C7E;
 
 $color_facebook: 		#3B5998;
 $color_twitter: 		#4099FF;
