--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1685,23 +1685,50 @@ body {
     content: "\e64e";
     bottom: -0.2em;
     font-size: 5em;
-    color: #5351d2;
+    color: #268474;
   }
 
   /* line 128, ../sass/main.scss */
+  .smartphone_project:after {
+    content: "\e65b";
+    bottom: 0em;
+    right: -0.18em;
+    font-size: 3em;
+    color: #f18e26;
+  }
+
+  /* line 137, ../sass/main.scss */
+  .tablet_project:after {
+    content: "\e65d";
+    bottom: 0em;
+    right: -0.12em;
+    font-size: 3.5em;
+    color: #fc4750;
+  }
+
+  /* line 146, ../sass/main.scss */
+  .ereader_project:after {
+    content: "\e65c";
+    bottom: 0em;
+    right: -0.18em;
+    font-size: 3em;
+    color: #992c7e;
+  }
+
+  /* line 155, ../sass/main.scss */
   .android_project:after {
     content: "\e649";
     color: #a4c639;
   }
 }
 @media (min-width: 47.9375em) {
-  /* line 136, ../sass/main.scss */
+  /* line 163, ../sass/main.scss */
   #main_container {
     width: 70%;
     margin: 0 auto;
   }
 
-  /* line 140, ../sass/main.scss */
+  /* line 167, ../sass/main.scss */
   .git_element {
     width: 47%;
     float: left;
@@ -1709,7 +1736,7 @@ body {
     margin: 0.6em 1.5%;
   }
 
-  /* line 146, ../sass/main.scss */
+  /* line 173, ../sass/main.scss */
   .git_element[data-thisrepo="true"] {
     clear: both;
     width: 97%;
@@ -1718,17 +1745,17 @@ body {
   }
 }
 @media (min-width: 61.9375em) {
-  /* line 155, ../sass/main.scss */
+  /* line 182, ../sass/main.scss */
   #main_container > header h1 {
     font-size: 1.3em;
   }
 
-  /* line 158, ../sass/main.scss */
+  /* line 185, ../sass/main.scss */
   .git_element {
     width: 30%;
     min-height: 9em;
   }
-  /* line 161, ../sass/main.scss */
+  /* line 188, ../sass/main.scss */
   .git_element:after {
     position: absolute;
     right: -0.15em;
@@ -1736,13 +1763,26 @@ body {
     font-size: 4em;
   }
 
-  /* line 169, ../sass/main.scss */
+  /* line 196, ../sass/main.scss */
   .robotic_project:after {
     font-size: 5em;
   }
+
+  /* line 203, ../sass/main.scss */
+  .smartphone_project:after,
+  .ereader_project:after {
+    bottom: 0;
+    right: -0.18em;
+  }
+
+  /* line 209, ../sass/main.scss */
+  .tablet_project:after {
+    bottom: 0;
+    right: -0.12em;
+  }
 }
 @media (min-width: 74.9375em) {
-  /* line 175, ../sass/main.scss */
+  /* line 216, ../sass/main.scss */
   .git_element {
     font-size: 1.2em;
     margin-top: 2em;
