--- a/styles/fonts/originales/bqreaders_icofont/style.css
+++ b/styles/fonts/originales/bqreaders_icofont/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'bqreaders_icofont';
-	src:url('fonts/bqreaders_icofont.eot?tccrbx');
-	src:url('fonts/bqreaders_icofont.eot?#iefixtccrbx') format('embedded-opentype'),
-		url('fonts/bqreaders_icofont.woff?tccrbx') format('woff'),
-		url('fonts/bqreaders_icofont.ttf?tccrbx') format('truetype'),
-		url('fonts/bqreaders_icofont.svg?tccrbx#bqreaders_icofont') format('svg');
+	src:url('fonts/bqreaders_icofont.eot?amvj6z');
+	src:url('fonts/bqreaders_icofont.eot?#iefixamvj6z') format('embedded-opentype'),
+		url('fonts/bqreaders_icofont.woff?amvj6z') format('woff'),
+		url('fonts/bqreaders_icofont.ttf?amvj6z') format('truetype'),
+		url('fonts/bqreaders_icofont.svg?amvj6z#bqreaders_icofont') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,11 +23,41 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-shopping_bag:before {
-	content: "\e624";
+.icon-software_color2:before {
+	content: "\e659";
+}
+.icon-software_color1:before {
+	content: "\e65a";
+}
+.icon-actualizaciones_color1:before {
+	content: "\e64f";
+}
+.icon-actualizaciones_color2:before {
+	content: "\e650";
+}
+.icon-objetos3d_color1:before {
+	content: "\e651";
+}
+.icon-objetos3d_color2:before {
+	content: "\e652";
+}
+.icon-videos_color1:before {
+	content: "\e653";
+}
+.icon-videos_color2:before {
+	content: "\e654";
+}
+.icon-documentation_color1:before {
+	content: "\e655";
+}
+.icon-documentation_color2:before {
+	content: "\e656";
 }
 .icon-robot:before {
 	content: "\e64e";
+}
+.icon-shopping_bag:before {
+	content: "\e624";
 }
 .icon-logo_bq:before {
 	content: "\e623";
@@ -91,57 +121,6 @@
 }
 .icon-3G:before {
 	content: "\e643";
-}
-.icon-android:before {
-	content: "\e649";
-}
-.icon-github:before {
-	content: "\e64a";
-}
-.icon-windows8:before {
-	content: "\e64b";
-}
-.icon-apple:before {
-	content: "\e64c";
-}
-.icon-download:before {
-	content: "\e62d";
-}
-.icon-book:before {
-	content: "\e62e";
-}
-.icon-tux:before {
-	content: "\e64d";
-}
-.icon-download2:before {
-	content: "\e628";
-}
-.icon-copy:before {
-	content: "\e62a";
-}
-.icon-drawer:before {
-	content: "\e630";
-}
-.icon-paste:before {
-	content: "\e632";
-}
-.icon-twitter3:before {
-	content: "\e644";
-}
-.icon-google-plus:before {
-	content: "\e645";
-}
-.icon-facebook4:before {
-	content: "\e646";
-}
-.icon-cart:before {
-	content: "\e614";
-}
-.icon-sad:before {
-	content: "\e647";
-}
-.icon-share:before {
-	content: "\e648";
 }
 .icon-arrow-right:before {
 	content: "\e600";
@@ -259,4 +238,70 @@
 }
 .icon-archive:before {
 	content: "\e62b";
+}
+.icon-paperplane:before {
+	content: "\e657";
+}
+.icon-cc:before {
+	content: "\e658";
+}
+.icon-download:before {
+	content: "\e62d";
+}
+.icon-book:before {
+	content: "\e62e";
+}
+.icon-download2:before {
+	content: "\e628";
+}
+.icon-copy:before {
+	content: "\e62a";
+}
+.icon-drawer:before {
+	content: "\e630";
+}
+.icon-paste:before {
+	content: "\e632";
+}
+.icon-twitter3:before {
+	content: "\e644";
+}
+.icon-google-plus:before {
+	content: "\e645";
+}
+.icon-facebook4:before {
+	content: "\e646";
+}
+.icon-cart:before {
+	content: "\e614";
+}
+.icon-sad:before {
+	content: "\e647";
+}
+.icon-share:before {
+	content: "\e648";
+}
+.icon-mobile:before {
+	content: "\e65b";
+}
+.icon-mobile2:before {
+	content: "\e65c";
+}
+.icon-tablet:before {
+	content: "\e65d";
+}
+.icon-github:before {
+	content: "\e64a";
+}
+.icon-tux:before {
+	content: "\e64d";
+}
+.icon-apple:before {
+	content: "\e64c";
+}
+.icon-android:before {
+	content: "\e649";
+}
+.icon-windows8:before {
+	content: "\e64b";
 }
